src/validation/tests/snapshots/rusty__validation__tests__enum_validation_test__enum_variants_mismatch.snap
---
source: src/validation/tests/enum_validation_test.rs
expression: diagnostics
---
error: Consider using enums rather than literal integers, e.g. `localState := Idle`
   ┌─ <internal>:18:31
   │
18 │                 localState := 0;
   │                               ^ Consider using enums rather than literal integers, e.g. `localState := Idle`

error: Consider using enums rather than literal integers, e.g. `localState := Working`
   ┌─ <internal>:19:31
   │
19 │                 localState := 100;
   │                               ^^^ Consider using enums rather than literal integers, e.g. `localState := Working`

error: Consider using enums rather than literal integers, e.g. `color := red`
   ┌─ <internal>:24:26
   │
24 │                 color := 0;
   │                          ^ Consider using enums rather than literal integers, e.g. `color := red`

error: Consider using enums rather than literal integers, e.g. `color := green`
   ┌─ <internal>:25:26
   │
25 │                 color := 1;
   │                          ^ Consider using enums rather than literal integers, e.g. `color := green`

error: Consider using enums rather than literal integers, e.g. `color := blue`
   ┌─ <internal>:26:26
   │
26 │                 color := 2;
   │                          ^ Consider using enums rather than literal integers, e.g. `color := blue`

error: Consider using enums with the same kind, e.g. `color := red`
   ┌─ <internal>:28:26
   │
28 │                 color := State.Idle;    // State.Idle == 0 == Color.Red
   │                          ^^^^^^^^^^ Consider using enums with the same kind, e.g. `color := red`

error: Consider using enums with the same kind, e.g. `localState := Idle`
   ┌─ <internal>:29:31
   │
29 │                 localState := red;      // Color.Red  == 0 == State.Idle
   │                               ^^^ Consider using enums with the same kind, e.g. `localState := Idle`

error: Value 99 is not bound in [red(0), green(1), blue(2)]
   ┌─ <internal>:38:26
   │
38 │                 color := 99;
   │                          ^^ Value 99 is not bound in [red(0), green(1), blue(2)]

error: Consider using enums rather than literal integers
   ┌─ <internal>:38:26
   │
38 │                 color := 99;
   │                          ^^ Consider using enums rather than literal integers

error: Value State.Working(100) is not bound in [red(0), green(1), blue(2)]
   ┌─ <internal>:39:26
   │
39 │                 color := State.Working;
   │                          ^^^^^^^^^^^^^ Value State.Working(100) is not bound in [red(0), green(1), blue(2)]

error: Consider using enums with the same kind
   ┌─ <internal>:39:26
   │
39 │                 color := State.Working;
   │                          ^^^^^^^^^^^^^ Consider using enums with the same kind

error: Value 99 is not bound in [red(0), green(1), blue(2)]
   ┌─ <internal>:40:26
   │
40 │                 color := invalidReferenceForEnum;
   │                          ^^^^^^^^^^^^^^^^^^^^^^^ Value 99 is not bound in [red(0), green(1), blue(2)]

error: Value of main.color is evaluated at run-time, can not verify if value is bound in (red := 0, green := 1, blue := 2)
   ┌─ <internal>:41:26
   │
41 │                 color := foo(); // Value of `foo()` unknown, might be outside of variants range
   │                          ^^^^^^ Value of main.color is evaluated at run-time, can not verify if value is bound in (red := 0, green := 1, blue := 2)

error: Value 99 is not bound in [Idle(0), Working(100)]
   ┌─ <internal>:43:31
   │
43 │                 localState := 99;
   │                               ^^ Value 99 is not bound in [Idle(0), Working(100)]

error: Consider using enums rather than literal integers
   ┌─ <internal>:43:31
   │
43 │                 localState := 99;
   │                               ^^ Consider using enums rather than literal integers

error: Value green(1) is not bound in [Idle(0), Working(100)]
   ┌─ <internal>:44:31
   │
44 │                 localState := green;
   │                               ^^^^^ Value green(1) is not bound in [Idle(0), Working(100)]

error: Consider using enums with the same kind
   ┌─ <internal>:44:31
   │
44 │                 localState := green;
   │                               ^^^^^ Consider using enums with the same kind

error: Value blue(2) is not bound in [Idle(0), Working(100)]
   ┌─ <internal>:45:31
   │
45 │                 localState := blue;
   │                               ^^^^ Value blue(2) is not bound in [Idle(0), Working(100)]

error: Consider using enums with the same kind
   ┌─ <internal>:45:31
   │
45 │                 localState := blue;
   │                               ^^^^ Consider using enums with the same kind

error: Value 99 is not bound in [Idle(0), Working(100)]
   ┌─ <internal>:46:31
   │
46 │                 localState := invalidReferenceForEnum;
   │                               ^^^^^^^^^^^^^^^^^^^^^^^ Value 99 is not bound in [Idle(0), Working(100)]


